infra/k8s/elasticsearch-consumer-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: elasticsearch-consumer-depl
  namespace: twitter-to-elastic
spec:
  replicas: 1
  selector:
    matchLabels: 
      app: elasticsearch-consumer
  template:
    metadata:
      labels:
        app: elasticsearch-consumer
    spec:
      containers:
        - name: elasticsearch-consumer
          image: localhost:5000/elasticsearch-consumer
