infra/k8s/twitter-producer-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: twitter-producer-depl
  namespace: twitter-to-elastic
spec:
  replicas: 1
  selector:
    matchLabels: 
      app: twitter-producer
  template:
    metadata:
      labels:
        app: twitter-producer
    spec:
      containers:
        - name: twitter-producer
          image: localhost:5000/twitter-producer
